parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASPAS
    COMMENT
    LCOLCHETE
    RCOLCHETE
    STRINGS

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> print_stmt
Rule 6     declaration -> read_stmt
Rule 7     declaration -> selection_stmt
Rule 8     declaration -> iteration_stmt
Rule 9     declaration -> expression
Rule 10    print_stmt -> PRINT LPAREN STRING RPAREN SEMI declaration
Rule 11    print_stmt -> PRINT LPAREN STRING RPAREN SEMI
Rule 12    print_stmt -> PRINT LPAREN IDENTIFIER RPAREN SEMI declaration
Rule 13    print_stmt -> PRINT LPAREN IDENTIFIER RPAREN SEMI
Rule 14    print_stmt -> PRINT LPAREN NUMBER RPAREN SEMI declaration
Rule 15    print_stmt -> PRINT LPAREN NUMBER RPAREN SEMI
Rule 16    print_stmt -> PRINT LPAREN boolean RPAREN SEMI declaration
Rule 17    print_stmt -> PRINT LPAREN boolean RPAREN SEMI
Rule 18    print_stmt -> PRINT LPAREN expression RPAREN SEMI declaration
Rule 19    print_stmt -> PRINT LPAREN expression RPAREN SEMI
Rule 20    print_stmt -> PRINT LPAREN RPAREN SEMI declaration
Rule 21    print_stmt -> PRINT LPAREN RPAREN SEMI
Rule 22    var_declaration -> IDENTIFIER var_declaration
Rule 23    var_declaration -> IDENTIFIER
Rule 24    var_declaration -> IDENTIFIER ATRIBUTION NUMBER var_declaration
Rule 25    var_declaration -> IDENTIFIER ATRIBUTION NUMBER SEMI
Rule 26    var_declaration -> IDENTIFIER ATRIBUTION boolean var_declaration
Rule 27    var_declaration -> IDENTIFIER ATRIBUTION boolean SEMI
Rule 28    var_declaration -> IDENTIFIER ATRIBUTION IDENTIFIER var_declaration
Rule 29    var_declaration -> IDENTIFIER ATRIBUTION IDENTIFIER SEMI
Rule 30    var_declaration -> IDENTIFIER ATRIBUTION simple_expression SEMI
Rule 31    statement -> expression_stmt
Rule 32    statement -> selection_stmt
Rule 33    statement -> iteration_stmt
Rule 34    statement -> print_stmt
Rule 35    statement -> read_stmt
Rule 36    expression_stmt -> expression
Rule 37    selection_stmt -> IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE statement
Rule 38    selection_stmt -> IF LPAREN expression RPAREN LBRACE expression RBRACE statement
Rule 39    selection_stmt -> IF LPAREN expression RPAREN LBRACE declaration RBRACE
Rule 40    selection_stmt -> IF LPAREN expression RPAREN LBRACE declaration RBRACE ELSE LBRACE declaration RBRACE
Rule 41    iteration_stmt -> FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE expression RBRACE statement
Rule 42    iteration_stmt -> FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE print_stmt RBRACE
Rule 43    iteration_stmt -> WHILE LPAREN expression RPAREN LBRACE expression RBRACE statement
Rule 44    iteration_stmt -> WHILE LPAREN expression RPAREN LBRACE statement RBRACE
Rule 45    iteration_stmt -> DO LBRACE statement SEMI RBRACE WHILE LPAREN expression RPAREN SEMI
Rule 46    iteration_stmt -> DO LBRACE print_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
Rule 47    iteration_stmt -> DO LBRACE read_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
Rule 48    iteration_stmt -> DO LBRACE selection_stmt RBRACE WHILE LPAREN expression RPAREN SEMI statement
Rule 49    iteration_stmt -> DO LBRACE selection_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
Rule 50    read_stmt -> READ LPAREN STRING RPAREN SEMI declaration
Rule 51    read_stmt -> READ LPAREN STRING RPAREN SEMI
Rule 52    read_stmt -> IDENTIFIER ATRIBUTION READ LPAREN STRING RPAREN SEMI
Rule 53    read_stmt -> IDENTIFIER ATRIBUTION READ LPAREN RPAREN SEMI
Rule 54    expression -> IDENTIFIER EQUALITY expression
Rule 55    expression -> simple_expression
Rule 56    expression -> IDENTIFIER EQUALITY IDENTIFIER
Rule 57    expression -> expression LOG expression
Rule 58    expression -> expression OU_LOGICO expression
Rule 59    simple_expression -> additive_expression relop additive_expression
Rule 60    simple_expression -> additive_expression
Rule 61    relop -> MENOR
Rule 62    relop -> MENOREQUALS
Rule 63    relop -> MAIOR
Rule 64    relop -> MAIOREQUALS
Rule 65    relop -> DIFERENTE
Rule 66    relop -> EQUALITY
Rule 67    additive_expression -> additive_expression addop term
Rule 68    additive_expression -> term
Rule 69    additive_expression -> term MINUSMINUS
Rule 70    additive_expression -> term PLUSPLUS
Rule 71    addop -> PLUS
Rule 72    addop -> MINUS
Rule 73    term -> term mulop factor
Rule 74    term -> factor
Rule 75    mulop -> TIMES
Rule 76    mulop -> DIVIDE
Rule 77    factor -> LPAREN expression RPAREN
Rule 78    factor -> IDENTIFIER
Rule 79    factor -> NUMBER
Rule 80    factor -> boolean
Rule 81    factor -> IDENTIFIER LPAREN args RPAREN
Rule 82    boolean -> TRUE
Rule 83    boolean -> FALSE
Rule 84    NUMBER -> INTEGER
Rule 85    NUMBER -> FLOAT
Rule 86    args -> args_list
Rule 87    args -> empty
Rule 88    args_list -> expression
Rule 89    expression -> expression PLUS term
Rule 90    expression -> expression MINUS term
Rule 91    expression -> expression TIMES term
Rule 92    expression -> expression DIVIDE term
Rule 93    expression -> expression TIMESX term
Rule 94    expression -> expression LOG term
Rule 95    expression -> expression OU_LOGICO term
Rule 96    empty -> <empty>

Terminals, with rules where they appear

ASPAS                : 
ATRIBUTION           : 24 25 26 27 28 29 30 52 53
COMMENT              : 
DIFERENTE            : 65
DIVIDE               : 76 92
DO                   : 45 46 47 48 49
ELSE                 : 37 40
EQUALITY             : 54 56 66
FALSE                : 83
FLOAT                : 85
FOR                  : 41 42
IDENTIFIER           : 12 13 22 23 24 25 26 27 28 28 29 29 30 52 53 54 56 56 78 81
IF                   : 37 38 39 40
INTEGER              : 84
LBRACE               : 37 37 38 39 40 40 41 42 43 44 45 46 47 48 49
LCOLCHETE            : 
LOG                  : 57 94
LPAREN               : 10 11 12 13 14 15 16 17 18 19 20 21 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 77 81
MAIOR                : 63
MAIOREQUALS          : 64
MENOR                : 61
MENOREQUALS          : 62
MINUS                : 72 90
MINUSMINUS           : 69
OU_LOGICO            : 58 95
PLUS                 : 71 89
PLUSPLUS             : 70
PRINT                : 10 11 12 13 14 15 16 17 18 19 20 21
RBRACE               : 37 37 38 39 40 40 41 42 43 44 45 46 47 48 49
RCOLCHETE            : 
READ                 : 50 51 52 53
RPAREN               : 10 11 12 13 14 15 16 17 18 19 20 21 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 77 81
SEMI                 : 10 11 12 13 14 15 16 17 18 19 20 21 25 27 29 30 41 42 45 45 46 47 48 49 50 51 52 53
STRING               : 10 11 50 51 52
STRINGS              : 
TIMES                : 75 91
TIMESX               : 93
TRUE                 : 82
WHILE                : 43 44 45 46 47 48 49
error                : 

Nonterminals, with rules where they appear

NUMBER               : 14 15 24 25 79
additive_expression  : 41 42 59 59 60 67
addop                : 67
args                 : 81
args_list            : 86
boolean              : 16 17 26 27 80
declaration          : 2 3 10 12 14 16 18 20 39 40 40 50
declaration_list     : 1 2
empty                : 87
expression           : 9 18 19 36 37 37 37 38 38 39 40 41 41 42 43 43 44 45 46 47 48 49 54 57 57 58 58 77 88 89 90 91 92 93 94 95
expression_stmt      : 31
factor               : 73 74
iteration_stmt       : 8 33
mulop                : 73
print_stmt           : 5 34 42 46
program              : 0
read_stmt            : 6 35 47
relop                : 59
selection_stmt       : 7 32 48 49
simple_expression    : 30 55
statement            : 37 38 41 43 44 45 48
term                 : 67 68 69 70 73 89 90 91 92 93 94 95
var_declaration      : 4 22 24 26 28 41 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . print_stmt
    (6) declaration -> . read_stmt
    (7) declaration -> . selection_stmt
    (8) declaration -> . iteration_stmt
    (9) declaration -> . expression
    (22) var_declaration -> . IDENTIFIER var_declaration
    (23) var_declaration -> . IDENTIFIER
    (24) var_declaration -> . IDENTIFIER ATRIBUTION NUMBER var_declaration
    (25) var_declaration -> . IDENTIFIER ATRIBUTION NUMBER SEMI
    (26) var_declaration -> . IDENTIFIER ATRIBUTION boolean var_declaration
    (27) var_declaration -> . IDENTIFIER ATRIBUTION boolean SEMI
    (28) var_declaration -> . IDENTIFIER ATRIBUTION IDENTIFIER var_declaration
    (29) var_declaration -> . IDENTIFIER ATRIBUTION IDENTIFIER SEMI
    (30) var_declaration -> . IDENTIFIER ATRIBUTION simple_expression SEMI
    (10) print_stmt -> . PRINT LPAREN STRING RPAREN SEMI declaration
    (11) print_stmt -> . PRINT LPAREN STRING RPAREN SEMI
    (12) print_stmt -> . PRINT LPAREN IDENTIFIER RPAREN SEMI declaration
    (13) print_stmt -> . PRINT LPAREN IDENTIFIER RPAREN SEMI
    (14) print_stmt -> . PRINT LPAREN NUMBER RPAREN SEMI declaration
    (15) print_stmt -> . PRINT LPAREN NUMBER RPAREN SEMI
    (16) print_stmt -> . PRINT LPAREN boolean RPAREN SEMI declaration
    (17) print_stmt -> . PRINT LPAREN boolean RPAREN SEMI
    (18) print_stmt -> . PRINT LPAREN expression RPAREN SEMI declaration
    (19) print_stmt -> . PRINT LPAREN expression RPAREN SEMI
    (20) print_stmt -> . PRINT LPAREN RPAREN SEMI declaration
    (21) print_stmt -> . PRINT LPAREN RPAREN SEMI
    (50) read_stmt -> . READ LPAREN STRING RPAREN SEMI declaration
    (51) read_stmt -> . READ LPAREN STRING RPAREN SEMI
    (52) read_stmt -> . IDENTIFIER ATRIBUTION READ LPAREN STRING RPAREN SEMI
    (53) read_stmt -> . IDENTIFIER ATRIBUTION READ LPAREN RPAREN SEMI
    (37) selection_stmt -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE statement
    (38) selection_stmt -> . IF LPAREN expression RPAREN LBRACE expression RBRACE statement
    (39) selection_stmt -> . IF LPAREN expression RPAREN LBRACE declaration RBRACE
    (40) selection_stmt -> . IF LPAREN expression RPAREN LBRACE declaration RBRACE ELSE LBRACE declaration RBRACE
    (41) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE expression RBRACE statement
    (42) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE print_stmt RBRACE
    (43) iteration_stmt -> . WHILE LPAREN expression RPAREN LBRACE expression RBRACE statement
    (44) iteration_stmt -> . WHILE LPAREN expression RPAREN LBRACE statement RBRACE
    (45) iteration_stmt -> . DO LBRACE statement SEMI RBRACE WHILE LPAREN expression RPAREN SEMI
    (46) iteration_stmt -> . DO LBRACE print_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
    (47) iteration_stmt -> . DO LBRACE read_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
    (48) iteration_stmt -> . DO LBRACE selection_stmt RBRACE WHILE LPAREN expression RPAREN SEMI statement
    (49) iteration_stmt -> . DO LBRACE selection_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
    (54) expression -> . IDENTIFIER EQUALITY expression
    (55) expression -> . simple_expression
    (56) expression -> . IDENTIFIER EQUALITY IDENTIFIER
    (57) expression -> . expression LOG expression
    (58) expression -> . expression OU_LOGICO expression
    (89) expression -> . expression PLUS term
    (90) expression -> . expression MINUS term
    (91) expression -> . expression TIMES term
    (92) expression -> . expression DIVIDE term
    (93) expression -> . expression TIMESX term
    (94) expression -> . expression LOG term
    (95) expression -> . expression OU_LOGICO term
    (59) simple_expression -> . additive_expression relop additive_expression
    (60) simple_expression -> . additive_expression
    (67) additive_expression -> . additive_expression addop term
    (68) additive_expression -> . term
    (69) additive_expression -> . term MINUSMINUS
    (70) additive_expression -> . term PLUSPLUS
    (73) term -> . term mulop factor
    (74) term -> . factor
    (77) factor -> . LPAREN expression RPAREN
    (78) factor -> . IDENTIFIER
    (79) factor -> . NUMBER
    (80) factor -> . boolean
    (81) factor -> . IDENTIFIER LPAREN args RPAREN
    (84) NUMBER -> . INTEGER
    (85) NUMBER -> . FLOAT
    (82) boolean -> . TRUE
    (83) boolean -> . FALSE

    IDENTIFIER      shift and go to state 10
    PRINT           shift and go to state 14
    READ            shift and go to state 16
    IF              shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    LPAREN          shift and go to state 15
    INTEGER         shift and go to state 24
    FLOAT           shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    print_stmt                     shift and go to state 5
    read_stmt                      shift and go to state 6
    selection_stmt                 shift and go to state 7
    iteration_stmt                 shift and go to state 8
    expression                     shift and go to state 9
    NUMBER                         shift and go to state 11
    boolean                        shift and go to state 12
    simple_expression              shift and go to state 13
    additive_expression            shift and go to state 19
    term                           shift and go to state 22
    factor                         shift and go to state 23

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . print_stmt
    (6) declaration -> . read_stmt
    (7) declaration -> . selection_stmt
    (8) declaration -> . iteration_stmt
    (9) declaration -> . expression
    (22) var_declaration -> . IDENTIFIER var_declaration
    (23) var_declaration -> . IDENTIFIER
    (24) var_declaration -> . IDENTIFIER ATRIBUTION NUMBER var_declaration
    (25) var_declaration -> . IDENTIFIER ATRIBUTION NUMBER SEMI
    (26) var_declaration -> . IDENTIFIER ATRIBUTION boolean var_declaration
    (27) var_declaration -> . IDENTIFIER ATRIBUTION boolean SEMI
    (28) var_declaration -> . IDENTIFIER ATRIBUTION IDENTIFIER var_declaration
    (29) var_declaration -> . IDENTIFIER ATRIBUTION IDENTIFIER SEMI
    (30) var_declaration -> . IDENTIFIER ATRIBUTION simple_expression SEMI
    (10) print_stmt -> . PRINT LPAREN STRING RPAREN SEMI declaration
    (11) print_stmt -> . PRINT LPAREN STRING RPAREN SEMI
    (12) print_stmt -> . PRINT LPAREN IDENTIFIER RPAREN SEMI declaration
    (13) print_stmt -> . PRINT LPAREN IDENTIFIER RPAREN SEMI
    (14) print_stmt -> . PRINT LPAREN NUMBER RPAREN SEMI declaration
    (15) print_stmt -> . PRINT LPAREN NUMBER RPAREN SEMI
    (16) print_stmt -> . PRINT LPAREN boolean RPAREN SEMI declaration
    (17) print_stmt -> . PRINT LPAREN boolean RPAREN SEMI
    (18) print_stmt -> . PRINT LPAREN expression RPAREN SEMI declaration
    (19) print_stmt -> . PRINT LPAREN expression RPAREN SEMI
    (20) print_stmt -> . PRINT LPAREN RPAREN SEMI declaration
    (21) print_stmt -> . PRINT LPAREN RPAREN SEMI
    (50) read_stmt -> . READ LPAREN STRING RPAREN SEMI declaration
    (51) read_stmt -> . READ LPAREN STRING RPAREN SEMI
    (52) read_stmt -> . IDENTIFIER ATRIBUTION READ LPAREN STRING RPAREN SEMI
    (53) read_stmt -> . IDENTIFIER ATRIBUTION READ LPAREN RPAREN SEMI
    (37) selection_stmt -> . IF LPAREN expression RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE statement
    (38) selection_stmt -> . IF LPAREN expression RPAREN LBRACE expression RBRACE statement
    (39) selection_stmt -> . IF LPAREN expression RPAREN LBRACE declaration RBRACE
    (40) selection_stmt -> . IF LPAREN expression RPAREN LBRACE declaration RBRACE ELSE LBRACE declaration RBRACE
    (41) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE expression RBRACE statement
    (42) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN LBRACE print_stmt RBRACE
    (43) iteration_stmt -> . WHILE LPAREN expression RPAREN LBRACE expression RBRACE statement
    (44) iteration_stmt -> . WHILE LPAREN expression RPAREN LBRACE statement RBRACE
    (45) iteration_stmt -> . DO LBRACE statement SEMI RBRACE WHILE LPAREN expression RPAREN SEMI
    (46) iteration_stmt -> . DO LBRACE print_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
    (47) iteration_stmt -> . DO LBRACE read_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
    (48) iteration_stmt -> . DO LBRACE selection_stmt RBRACE WHILE LPAREN expression RPAREN SEMI statement
    (49) iteration_stmt -> . DO LBRACE selection_stmt RBRACE WHILE LPAREN expression RPAREN SEMI
    (54) expression -> . IDENTIFIER EQUALITY expression
    (55) expression -> . simple_expression
    (56) expression -> . IDENTIFIER EQUALITY IDENTIFIER
    (57) expression -> . expression LOG expression
    (58) expression -> . expression OU_LOGICO expression
    (89) expression -> . expression PLUS term
    (90) expression -> . expression MINUS term
    (91) expression -> . expression TIMES term
    (92) expression -> . expression DIVIDE term
    (93) expression -> . expression TIMESX term
    (94) expression -> . expression LOG term
    (95) expression -> . expression OU_LOGICO term
    (59) simple_expression -> . additive_expression relop additive_expression
    (60) simple_expression -> . additive_expression
    (67) additive_expression -> . additive_expression addop term
    (68) additive_expression -> . term
    (69) additive_expression -> . term MINUSMINUS
    (70) additive_expression -> . term PLUSPLUS
    (73) term -> . term mulop factor
    (74) term -> . factor
    (77) factor -> . LPAREN expression RPAREN
    (78) factor -> . IDENTIFIER
    (79) factor -> . NUMBER
    (80) factor -> . boolean
    (81) factor -> . IDENTIFIER LPAREN args RPAREN
    (84) NUMBER -> . INTEGER
    (85) NUMBER -> . FLOAT
    (82) boolean -> . TRUE
    (83) boolean -> . FALSE

    $end            reduce using rule 1 (program -> declaration_list .)
    IDENTIFIER      shift and go to state 10
    PRINT           shift and go to state 14
    READ            shift and go to state 16
    IF              shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    LPAREN          shift and go to state 15
    INTEGER         shift and go to state 24
    FLOAT           shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    declaration                    shift and go to state 28
    var_declaration                shift and go to state 4
    print_stmt                     shift and go to state 5
    read_stmt                      shift and go to state 6
    selection_stmt                 shift and go to state 7
    iteration_stmt                 shift and go to state 8
    expression                     shift and go to state 9
    NUMBER                         shift and go to state 11
    boolean                        shift and go to state 12
    simple_expression              shift and go to state 13
    additive_expression            shift and go to state 19
    term                           shift and go to state 22
    factor                         shift and go to state 23

state 3

    (3) declaration_list -> declaration .

    IDENTIFIER      reduce using rule 3 (declaration_list -> declaration .)
    PRINT           reduce using rule 3 (declaration_list -> declaration .)
    READ            reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    DO              reduce using rule 3 (declaration_list -> declaration .)
    LPAREN          reduce using rule 3 (declaration_list -> declaration .)
    INTEGER         reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    TRUE            reduce using rule 3 (declaration_list -> declaration .)
    FALSE           reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    IDENTIFIER      reduce using rule 4 (declaration -> var_declaration .)
    PRINT           reduce using rule 4 (declaration -> var_declaration .)
    READ            reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    DO              reduce using rule 4 (declaration -> var_declaration .)
    LPAREN          reduce using rule 4 (declaration -> var_declaration .)
    INTEGER         reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    TRUE            reduce using rule 4 (declaration -> var_declaration .)
    FALSE           reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)
    RBRACE          reduce using rule 4 (declaration -> var_declaration .)
    SEMI            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> print_stmt .

    IDENTIFIER      reduce using rule 5 (declaration -> print_stmt .)
    PRINT           reduce using rule 5 (declaration -> print_stmt .)
    READ            reduce using rule 5 (declaration -> print_stmt .)
    IF              reduce using rule 5 (declaration -> print_stmt .)
    FOR             reduce using rule 5 (declaration -> print_stmt .)
    WHILE           reduce using rule 5 (declaration -> print_stmt .)
    DO              reduce using rule 5 (declaration -> print_stmt .)
    LPAREN          reduce using rule 5 (declaration -> print_stmt .)
    INTEGER         reduce using rule 5 (declaration -> print_stmt .)
    FLOAT           reduce using rule 5 (declaration -> print_stmt .)
    TRUE            reduce using rule 5 (declaration -> print_stmt .)
    FALSE           reduce using rule 5 (declaration -> print_stmt .)
    $end            reduce using rule 5 (declaration -> print_stmt .)
    RBRACE          reduce using rule 5 (declaration -> print_stmt .)
    SEMI            reduce using rule 5 (declaration -> print_stmt .)


state 6

    (6) declaration -> read_stmt .

    IDENTIFIER      reduce using rule 6 (declaration -> read_stmt .)
    PRINT           reduce using rule 6 (declaration -> read_stmt .)
    READ            reduce using rule 6 (declaration -> read_stmt .)
    IF              reduce using rule 6 (declaration -> read_stmt .)
    FOR             reduce using rule 6 (declaration -> read_stmt .)
    WHILE           reduce using rule 6 (declaration -> read_stmt .)
    DO              reduce using rule 6 (declaration -> read_stmt .)
    LPAREN          reduce using rule 6 (declaration -> read_stmt .)
    INTEGER         reduce using rule 6 (declaration -> read_stmt .)
    FLOAT           reduce using rule 6 (declaration -> read_stmt .)
    TRUE            reduce using rule 6 (declaration -> read_stmt .)
    FALSE           reduce using rule 6 (declaration -> read_stmt .)
    $end            reduce using rule 6 (declaration -> read_stmt .)
    RBRACE          reduce using rule 6 (declaration -> read_stmt .)
    SEMI            reduce using rule 6 (declaration -> read_stmt .)


state 7

    (7) declaration -> selection_stmt .

    IDENTIFIER      reduce using rule 7 (declaration -> selection_stmt .)
    PRINT           reduce using rule 7 (declaration -> selection_stmt .)
    READ            reduce using rule 7 (declaration -> selection_stmt .)
    IF              reduce using rule 7 (declaration -> selection_stmt .)
    FOR             reduce using rule 7 (declaration -> selection_stmt .)
    WHILE           reduce using rule 7 (declaration -> selection_stmt .)
    DO              reduce using rule 7 (declaration -> selection_stmt .)
    LPAREN          reduce using rule 7 (declaration -> selection_stmt .)
    INTEGER         reduce using rule 7 (declaration -> selection_stmt .)
    FLOAT           reduce using rule 7 (declaration -> selection_stmt .)
    TRUE            reduce using rule 7 (declaration -> selection_stmt .)
    FALSE           reduce using rule 7 (declaration -> selection_stmt .)
    $end            reduce using rule 7 (declaration -> selection_stmt .)
    RBRACE          reduce using rule 7 (declaration -> selection_stmt .)
    SEMI            reduce using rule 7 (declaration -> selection_stmt .)


state 8

    (8) declaration -> iteration_stmt .
